hphp/test/zend/bad/zend/bug60138.php
<?php
$tree = array(array("f"));
$category =& $tree[0];

$iterator = new RecursiveIteratorIterator(
    new RecursiveArrayIterator($tree),
    RecursiveIteratorIterator::SELF_FIRST
);
foreach($iterator as $file);
echo "ok\n";
?>